--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -59,8 +59,8 @@
   } 
   
     .logo-2 {
-    width: 150px;
-    height: 50px
+    width: 100px;
+    height: 60px
   } 
   
     .logo-3 {
@@ -72,7 +72,7 @@
     color:#444; 
     text-decoration: none; 
     font-family: 'Josefin Slab', serif;
-    font-size: 1px;
+    font-size: 5px;
     margin-left: 10px;
     text-transform: uppercase;
     text-align: center;
@@ -80,7 +80,7 @@
 
   nav {
     margin-right: 5%;
-    font-size: 2px;
+    font-size: 5px;
     text-align: center;
   }
   
@@ -105,6 +105,7 @@
 
 .info-text {
   font-size:13px;
+  font-weight: bolder;
   font-family: 'Noto Sans JP', sans-serif;
   margin-bottom: 30px;
   color: #444;
@@ -295,7 +296,7 @@ height: 100%;
   left: 1%;
   top: calc(93% - 40px); 
   text-align: left;
-  font-weight: lighter;
+  font-weight: bold
 }
 /*   Fourth block End   */
 
@@ -323,14 +324,14 @@ height: 100%;
   .wasedadirect p {
     font-family: 'Noto Sans JP', sans-serif;
     position: absolute;
-    font-size: 5px;
+    font-size: 8px;
     line-height: 150%;
     position: absolute;
     width: 100%;
     left: 1%;
     top: calc(80% - 40px); 
     text-align: left;
-    font-weight: lighter;
+    font-weight: bold
   }
 /*   Fifth block End   */
 
@@ -358,7 +359,7 @@ height: 100%;
   .waseguard p {
     font-family: 'Noto Sans JP', sans-serif;
     position: absolute;
-    font-size: 6px;
+    font-size: 8px;
     line-height: 150%;
     position: absolute;
     width: 100%;
@@ -366,7 +367,7 @@ height: 100%;
     left: 1%;
     top: calc(88% - 40px); 
     text-align: left;
-    font-weight: lighter;
+    font-weight: bold
   }
 /*   Sixth block End   */
 
