--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -5,7 +5,7 @@
   }
 
   .snow {
-    color: red ; /*雪の色*/
+    color: #f4b3c2 ; /*雪の色*/
     font-size: 12px; /*雪の大きさ*/
     position: fixed;
     top: -5%; /*初期位置*/
@@ -106,7 +106,7 @@
 .info-text {
   font-size:13px;
   font-weight: bolder;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Open Sans';
   margin-bottom: 30px;
   color: #444;
   text-align:center;
