--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -1,17 +1,16 @@
-@media screen and (min-width: 769px){
-
-* {
+@media screen and (max-width:480px){
+  * {
     margin: 0;
     padding: 0;
   }
 
   .snow {
     color: #f4b3c2 ; /*雪の色*/
-    font-size: 30px; /*雪の大きさ*/
+    font-size: 12px; /*雪の大きさ*/
     position: fixed;
     top: -5%; /*初期位置*/
     text-shadow:
-    5vw   -400px 2px,
+    5vw   -100px 2px,
     10vw  -400px 3px,
     20vw  -500px 4px, 
     30vw  -580px 1px,
@@ -32,6 +31,7 @@
     }
   }
 
+
   .header-nav1 {
     background-color:#FFF5EE;
     position: fixed;
@@ -44,55 +44,58 @@
   }
 
   .logo {
+    margin-bottom: 20px;
     display: -webkit-flex;
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    margin-right:35%;
-  }  
-
+    width:10;
+    height:15;
+  }
+  
   .logo-1 {
-  width: 100px;
-  height: 100px
-} 
-
-  .logo-2 {
-  width: 150px;
-  height: 110px
-} 
-
-  .logo-3 {
-  width: 100px;
-  height: 100px
-} 
+    width: 30%;
+    height: 30%;
+  } 
+  
+    .logo-2 {
+    width: 80px;
+    height: 50px
+  } 
+  
+    .logo-3 {
+    width: 25%;
+    height: 25%;
+  } 
 
   header a {
     color:#444; 
     text-decoration: none; 
     font-family: 'Josefin Slab', serif;
-    font-size: 18px;
-    margin: auto;
+    font-size: 10px;
+    margin-left: 10px;
     text-transform: uppercase;
-    margin: auto;
-    margin-right: 5px;
+    text-align: center;
   }
 
   nav {
     margin-right: 5%;
+    font-size: 5px;
+    text-align: center;
   }
+  
   
     /*   Second block   */
 #second-block {
   background-color:#FFF5EE;
   text-align: center;
   height: 250px;
-  width: 100%;
-  padding-top: 10%;
+  padding-top: 150px;
   padding-bottom: 100px;
 }
 
 .info-title {
-  font-size: 60px;
+  font-size: 50px;
   font-family: 'Josefin Slab', serif;
   font-weight: 500;
   color:#ff5757;
@@ -101,13 +104,13 @@
 }
 
 .info-text {
-  font-size: 30px;
+  font-size:13px;
+  font-weight: bolder;
   font-family: 'Open Sans';
   margin-bottom: 30px;
   color: #444;
   text-align:center;
   line-height: 200%;
-  font-weight: bold
 }
 /*   Second block End   */
 
@@ -120,10 +123,9 @@
 }
 
 .project-title {
-  font-size: 50px;
+  font-size: 40px;
   font-family: 'Josefin Slab', serif;
   font-weight: 500;
-  margin-top: 10%;
   color:#ff5757;
   text-align:center;
 }  
@@ -135,10 +137,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Josefin Slab', serif;
-  font-size: 18pt;        /* 文字サイズ */
+  font-size: 10pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
+  padding: 10px 10px;   /* 余白       */
   background: #16A085 ;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -157,10 +159,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Josefin Slab', serif;
-  font-size: 18pt;        /* 文字サイズ */
+  font-size: 10pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
+  padding: 10px 10px;   /* 余白       */
   background:#C13584;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -179,10 +181,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Josefin Slab', serif;
-  font-size: 18pt;        /* 文字サイズ */
+  font-size: 10pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
+  padding: 10px 10px;   /* 余白       */
   background: #3B5998;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -201,10 +203,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Josefin Slab', serif;
-  font-size: 18pt;        /* 文字サイズ */
+  font-size: 10pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
+  padding: 10px 10px;   /* 余白       */
   background: #00B900;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -223,10 +225,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Josefin Slab', serif;
-  font-size: 18pt;        /* 文字サイズ */
+  font-size: 10pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
+  padding: 10px 10px;   /* 余白       */
   background: #1DA1F2;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -245,10 +247,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Josefin Slab', serif;
-  font-size: 18pt;        /* 文字サイズ */
+  font-size: 10pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
+  padding: 10px 10px;   /* 余白       */
   background: #DA1725;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -275,24 +277,25 @@ height: 100%;
 
 .silsxsils h1 {
   position: absolute;
-  font-size: 55px;
+  font-size: 14px;
   font-family: 'Permanent Marker', cursive;
   color: white;
   font-weight: bold;
-  top: 6%;
-  left: 5%;
+  top: 15%;
+  left: 4%;
 }
 
 .silsxsils p {
   font-family: 'Noto Sans JP', sans-serif;
   position: absolute;
-  font-size: 22px;
+  font-size: 11px;
   line-height: 150%;
   position: absolute;
   width: 100%;
   right: 5%; 
-  top: calc(55% - 40px); 
-  text-align: right;
+  left: 1%;
+  top: calc(93% - 40px); 
+  text-align: left;
   font-weight: bold
 }
 /*   Fourth block End   */
@@ -300,33 +303,34 @@ height: 100%;
 /*   WASEDA DIRECT */
 .wasedadirect{
   position: relative;
+  margin-top: 12%;
   }
   
   .wasedadirect img {
   width: 100%;
-  height: 100%
+  height: 100%;
   }
   
   .wasedadirect h1 {
     position: absolute;
-    font-size: 65px;
+    font-size: 20px;
     font-family: 'Permanent Marker', cursive;
     color: white;
     font-weight: bold;
-    top: 6%;
+    top: 15%;
     left: 5%
   }
   
   .wasedadirect p {
     font-family: 'Noto Sans JP', sans-serif;
     position: absolute;
-    font-size: 22px;
+    font-size: 11px;
     line-height: 150%;
     position: absolute;
     width: 100%;
-    right: 3%; 
-    top: calc(60% - 40px); 
-    text-align: right;
+    left: 1.5%;
+    top: calc(80% - 40px); 
+    text-align: left;
     font-weight: bold
   }
 /*   Fifth block End   */
@@ -334,6 +338,7 @@ height: 100%;
 /*   WASEGUARD   */
 .waseguard{
   position: relative;
+  margin-top: 3%;
   }
   
   .waseguard img {
@@ -343,24 +348,25 @@ height: 100%;
   
   .waseguard h1 {
     position: absolute;
-    font-size: 65px;
+    font-size: 20px;
     font-family: 'Permanent Marker', cursive;
     color: white;
     font-weight: bold;
-    top: 10%;
+    top: 15%;
     left: 5%;
   }
   
   .waseguard p {
     font-family: 'Noto Sans JP', sans-serif;
     position: absolute;
-    font-size: 22px;
+    font-size: 11px;
     line-height: 150%;
     position: absolute;
     width: 100%;
-    right: 3%; 
-    top: calc(61% - 40px); 
-    text-align: right;
+    right: 4%; 
+    left: 1%;
+    top: calc(81% - 40px); 
+    text-align: left;
     font-weight: bold
   }
 /*   Sixth block End   */
@@ -369,13 +375,13 @@ height: 100%;
  #seventh-block {
   background-color: white;
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   width: 100%;
 }
 
 .contact-title {
-  font-size: 40px;
+  font-size: 20px;
   font-family: 'Beth Ellen', cursive;
   font-weight: 500;
   color: #ff5757;
@@ -395,9 +401,10 @@ height: 100%;
         text-align: center;
         height: 50px;
         width: 100%;
+        top: 10%;
         background-color:white;
-        font-size: 15px;
-        color:#444;;
+        font-size: 0.3px;
+        color:#444;
         font-family:'Josefin Slab', serif;
       }
   
