--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -286,7 +286,7 @@ height: 100%;
 }
 
 .silsxsils p {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Open Sans';
   position: absolute;
   font-size: 11px;
   line-height: 150%;
@@ -322,7 +322,7 @@ height: 100%;
   }
   
   .wasedadirect p {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Open Sans';
     position: absolute;
     font-size: 11px;
     line-height: 150%;
@@ -357,7 +357,7 @@ height: 100%;
   }
   
   .waseguard p {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Open Sans';
     position: absolute;
     font-size: 11px;
     line-height: 150%;
@@ -387,12 +387,6 @@ height: 100%;
   color: #ff5757;
   text-align: center;
 } 
-
-.contact{
-  font-size: 20px;
-  color:#444;;
-  font-family:'Josefin Slab', serif;
-} 
 /*   Seventh block End   */
 
   footer{
@@ -405,7 +399,7 @@ height: 100%;
         background-color:white;
         font-size: 0.3px;
         color:#444;
-        font-family:'Josefin Slab', serif;
+        font-family: 'Open Sans';
       }
   
     }
