--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -69,7 +69,7 @@
   header a {
     color:#444; 
     text-decoration: none; 
-    font-family: 'Josefin Slab', serif;
+    font-family: 'Open Sans';
     font-size: 18px;
     margin: auto;
     text-transform: uppercase;
@@ -134,7 +134,7 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
@@ -156,7 +156,7 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
@@ -178,7 +178,7 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
@@ -200,7 +200,7 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
@@ -222,7 +222,7 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Josefin Slab', serif;
+  font-family:'Open Sans';
   font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
@@ -244,7 +244,7 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
