--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -96,7 +96,7 @@
 
 .info-title {
   font-size: 50px;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-weight: 500;
   color:#ff5757;
   text-align:center;
@@ -124,7 +124,7 @@
 
 .project-title {
   font-size: 40px;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Open Sans';
   font-weight: 500;
   color:#ff5757;
   text-align:center;
@@ -382,7 +382,7 @@ height: 100%;
 
 .contact-title {
   font-size: 20px;
-  font-family: 'Beth Ellen', cursive;
+  font-family: 'Open Sans';
   font-weight: 500;
   color: #ff5757;
   text-align: center;
