--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -276,7 +276,7 @@ height: 100%;
 .silsxsils h1 {
   position: absolute;
   font-size: 55px;
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Open Sans';
   color: white;
   font-weight: bold;
   top: 6%;
