--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -278,7 +278,7 @@ height: 100%;
 .silsxsils h1 {
   position: absolute;
   font-size: 14px;
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Open Sans';
   color: white;
   font-weight: bold;
   top: 15%;
