--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,12 +1,13 @@
-@media screen and (max-width:480px){
-  * {
+@media screen and (min-width: 769px){
+
+* {
     margin: 0;
     padding: 0;
   }
 
   .snow {
     color: #f4b3c2 ; /*雪の色*/
-    font-size: 12px; /*雪の大きさ*/
+    font-size: 30px; /*雪の大きさ*/
     position: fixed;
     top: -5%; /*初期位置*/
     text-shadow:
@@ -31,7 +32,6 @@
     }
   }
 
-
   .header-nav1 {
     background-color:#FFF5EE;
     position: fixed;
@@ -44,58 +44,55 @@
   }
 
   .logo {
-    margin-bottom: 20px;
     display: -webkit-flex;
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    width:10;
-    height:15;
-  }
-  
+    margin-right:35%;
+  }  
+
   .logo-1 {
-    width: 30%;
-    height: 30%;
-  } 
-  
-    .logo-2 {
-    width: 80px;
-    height: 50px
-  } 
-  
-    .logo-3 {
-    width: 25%;
-    height: 25%;
-  } 
+  width: 100px;
+  height: 100px
+} 
+
+  .logo-2 {
+  width: 150px;
+  height: 110px
+} 
+
+  .logo-3 {
+  width: 100px;
+  height: 100px
+} 
 
   header a {
     color:#444; 
     text-decoration: none; 
     font-family: 'Open Sans';
-    font-size: 10px;
-    margin-left: 10px;
+    font-size: 18px;
+    margin: auto;
     text-transform: uppercase;
-    text-align: center;
+    margin: auto;
+    margin-right: 5px;
   }
 
   nav {
     margin-right: 5%;
-    font-size: 5px;
-    text-align: center;
   }
-  
   
     /*   Second block   */
 #second-block {
   background-color:#FFF5EE;
   text-align: center;
   height: 250px;
-  padding-top: 150px;
+  width: 100%;
+  padding-top: 10%;
   padding-bottom: 100px;
 }
 
 .info-title {
-  font-size: 50px;
+  font-size: 60px;
   font-family: 'Open Sans';
   font-weight: 500;
   color:#ff5757;
@@ -104,13 +101,13 @@
 }
 
 .info-text {
-  font-size:13px;
-  font-weight: bolder;
+  font-size: 30px;
   font-family: 'Open Sans';
   margin-bottom: 30px;
   color: #444;
   text-align:center;
   line-height: 200%;
+  font-weight: bold
 }
 /*   Second block End   */
 
@@ -123,9 +120,10 @@
 }
 
 .project-title {
-  font-size: 40px;
+  font-size: 50px;
   font-family: 'Open Sans';
   font-weight: 500;
+  margin-top: 15%;
   color:#ff5757;
   text-align:center;
 }  
@@ -137,10 +135,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
+  font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
+  padding: 12px 12px;   /* 余白       */
   background: #16A085 ;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -159,10 +157,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
+  font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
+  padding: 12px 12px;   /* 余白       */
   background:#C13584;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -181,10 +179,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
+  font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
+  padding: 12px 12px;   /* 余白       */
   background: #3B5998;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -203,10 +201,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
+  font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
+  padding: 12px 12px;   /* 余白       */
   background: #00B900;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -224,11 +222,11 @@
   position:static;
   top:50px;
   display: inline-block;
-  font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
+  font-family:'Open Sans';
+  font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
+  padding: 12px 12px;   /* 余白       */
   background: #1DA1F2;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -247,10 +245,10 @@
   top:50px;
   display: inline-block;
   font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
+  font-size: 18pt;        /* 文字サイズ */
   text-align: center;      /* 文字位置   */
   cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
+  padding: 12px 12px;   /* 余白       */
   background: #DA1725;     /* 背景色     */
   color: #ffffff;     /* 文字色     */
   line-height: 1em;         /* 1行の高さ  */
@@ -277,25 +275,24 @@ height: 100%;
 
 .silsxsils h1 {
   position: absolute;
-  font-size: 14px;
+  font-size: 55px;
   font-family: 'Open Sans';
   color: white;
   font-weight: bold;
-  top: 15%;
-  left: 4%;
+  top: 6%;
+  left: 5%;
 }
 
 .silsxsils p {
   font-family: 'Open Sans';
   position: absolute;
-  font-size: 11px;
+  font-size: 22px;
   line-height: 150%;
   position: absolute;
   width: 100%;
   right: 5%; 
-  left: 1%;
-  top: calc(93% - 40px); 
-  text-align: left;
+  top: calc(55% - 40px); 
+  text-align: right;
   font-weight: bold
 }
 /*   Fourth block End   */
@@ -303,34 +300,33 @@ height: 100%;
 /*   WASEDA DIRECT */
 .wasedadirect{
   position: relative;
-  margin-top: 12%;
   }
   
   .wasedadirect img {
   width: 100%;
-  height: 100%;
+  height: 100%
   }
   
   .wasedadirect h1 {
     position: absolute;
-    font-size: 20px;
+    font-size: 55px;
     font-family: 'Open Sans';
     color: white;
     font-weight: bold;
-    top: 15%;
+    top: 6%;
     left: 5%
   }
   
   .wasedadirect p {
     font-family: 'Open Sans';
     position: absolute;
-    font-size: 11px;
+    font-size: 22px;
     line-height: 150%;
     position: absolute;
     width: 100%;
-    left: 1.5%;
-    top: calc(80% - 40px); 
-    text-align: left;
+    right: 3%; 
+    top: calc(60% - 40px); 
+    text-align: right;
     font-weight: bold
   }
 /*   Fifth block End   */
@@ -338,7 +334,6 @@ height: 100%;
 /*   WASEGUARD   */
 .waseguard{
   position: relative;
-  margin-top: 3%;
   }
   
   .waseguard img {
@@ -348,25 +343,24 @@ height: 100%;
   
   .waseguard h1 {
     position: absolute;
-    font-size: 20px;
+    font-size: 55px;
     font-family: 'Open Sans';
     color: white;
     font-weight: bold;
-    top: 15%;
+    top: 10%;
     left: 5%;
   }
   
   .waseguard p {
     font-family: 'Open Sans';
     position: absolute;
-    font-size: 11px;
+    font-size: 22px;
     line-height: 150%;
     position: absolute;
     width: 100%;
-    right: 4%; 
-    left: 1%;
-    top: calc(81% - 40px); 
-    text-align: left;
+    right: 3%; 
+    top: calc(61% - 40px); 
+    text-align: right;
     font-weight: bold
   }
 /*   Sixth block End   */
@@ -375,13 +369,13 @@ height: 100%;
  #seventh-block {
   background-color: white;
   text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   width: 100%;
 }
 
 .contact-title {
-  font-size: 20px;
+  font-size: 40px;
   font-family: 'Open Sans';
   font-weight: 500;
   color: #ff5757;
@@ -395,11 +389,10 @@ height: 100%;
         text-align: center;
         height: 50px;
         width: 100%;
-        top: 10%;
         background-color:white;
-        font-size: 0.3px;
-        color:#444;
-        font-family: 'Open Sans';
+        font-size: 15px;
+        color:#444;;
+        font-family:'Open Sans';
       }
   
     }
