--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -6,8 +6,8 @@
   }
 
   .snow {
-    color: #f4b3c2 ; /*雪の色*/
-    font-size: 30px; /*雪の大きさ*/
+    color:#2E86C1 ; /*雪の色*/
+    font-size: 45px; /*雪の大きさ*/
     position: fixed;
     top: -5%; /*初期位置*/
     text-shadow:
@@ -171,50 +171,6 @@
 .insta:hover {
   box-shadow: none;        /* カーソル時の影消去 */
   color: #C13584;     /* 背景色     */
-  background: #ffffff;     /* 文字色     */
-}
-
-.fb {
-  position:static;
-  top:50px;
-  display: inline-block;
-  font-family: 'Open Sans';
-  font-size: 18pt;        /* 文字サイズ */
-  text-align: center;      /* 文字位置   */
-  cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
-  background: #3B5998;     /* 背景色     */
-  color: #ffffff;     /* 文字色     */
-  line-height: 1em;         /* 1行の高さ  */
-  transition: .3s;         /* なめらか変化 */
-  box-shadow: 6px 6px 3px #666666;  /* 影の設定 */
-  border: 2px solid #3B5998;    /* 枠の指定 */
-}
-.fb:hover {
-  box-shadow: none;        /* カーソル時の影消去 */
-  color: #3B5998;     /* 背景色     */
-  background: #ffffff;     /* 文字色     */
-}
-
-.line {
-  position:static;
-  top:50px;
-  display: inline-block;
-  font-family: 'Open Sans';
-  font-size: 18pt;        /* 文字サイズ */
-  text-align: center;      /* 文字位置   */
-  cursor: pointer;     /* カーソル   */
-  padding: 12px 12px;   /* 余白       */
-  background: #00B900;     /* 背景色     */
-  color: #ffffff;     /* 文字色     */
-  line-height: 1em;         /* 1行の高さ  */
-  transition: .3s;         /* なめらか変化 */
-  box-shadow: 6px 6px 3px #666666;  /* 影の設定 */
-  border: 2px solid #00B900;    /* 枠の指定 */
-}
-.line:hover {
-  box-shadow: none;        /* カーソル時の影消去 */
-  color: #00B900;     /* 背景色     */
   background: #ffffff;     /* 文字色     */
 }
 
