--- a/stylesheets/smartphone.css
+++ b/stylesheets/smartphone.css
@@ -5,7 +5,7 @@
   }
 
   .snow {
-    color: #f4b3c2 ; /*雪の色*/
+    color:blue; /*雪の色*/
     font-size: 12px; /*雪の大きさ*/
     position: fixed;
     top: -5%; /*初期位置*/
@@ -173,50 +173,6 @@
 .insta:hover {
   box-shadow: none;        /* カーソル時の影消去 */
   color: #C13584;     /* 背景色     */
-  background: #ffffff;     /* 文字色     */
-}
-
-.fb {
-  position:static;
-  top:50px;
-  display: inline-block;
-  font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
-  text-align: center;      /* 文字位置   */
-  cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
-  background: #3B5998;     /* 背景色     */
-  color: #ffffff;     /* 文字色     */
-  line-height: 1em;         /* 1行の高さ  */
-  transition: .3s;         /* なめらか変化 */
-  box-shadow: 6px 6px 3px #666666;  /* 影の設定 */
-  border: 2px solid #3B5998;    /* 枠の指定 */
-}
-.fb:hover {
-  box-shadow: none;        /* カーソル時の影消去 */
-  color: #3B5998;     /* 背景色     */
-  background: #ffffff;     /* 文字色     */
-}
-
-.line {
-  position:static;
-  top:50px;
-  display: inline-block;
-  font-family: 'Open Sans';
-  font-size: 10pt;        /* 文字サイズ */
-  text-align: center;      /* 文字位置   */
-  cursor: pointer;     /* カーソル   */
-  padding: 10px 10px;   /* 余白       */
-  background: #00B900;     /* 背景色     */
-  color: #ffffff;     /* 文字色     */
-  line-height: 1em;         /* 1行の高さ  */
-  transition: .3s;         /* なめらか変化 */
-  box-shadow: 6px 6px 3px #666666;  /* 影の設定 */
-  border: 2px solid #00B900;    /* 枠の指定 */
-}
-.line:hover {
-  box-shadow: none;        /* カーソル時の影消去 */
-  color: #00B900;     /* 背景色     */
   background: #ffffff;     /* 文字色     */
 }
 
